--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -3,9 +3,10 @@
 .navigation {
 
   .sidebar {
+    position: fixed;
     float: left;
     padding: 2em;
-    width: 33%;
+    width: 20%;
   
   
     .sidebar-item {
