attempt to set up react-router / to review

--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -17,6 +17,13 @@
       &:hover {
         color: $mainColor;
       }
+
+      .sidebar-item-link {
+
+        &.linked {
+          color: $mainColor;
+        }
+      }
     }
   }
 }
