--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -6,7 +6,7 @@
   top: 0;
   bottom: 0;
   background: rgb(236, 232, 223);
-  border-right: 4px solid $titleBackground;
+  border-right: 4px solid $mainColor;
   padding-top: 1em;
 
   .nav-item {
